--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,7 +1,10 @@
 <view class="all">
   <swiper autoplay="true" interval="5000">
     <swiper-item>
-      <image src="https://s4.ax1x.com/2021/03/20/6hPacj.jpg"></image>
+      <image src="../../images/p1.jpg"></image>
+    </swiper-item>
+    <swiper-item>
+      <image src="../../images/p2.jpg"></image>
     </swiper-item>
   </swiper>
   <view class="line">
