--- a/miniprogram/pages/create/find_create/find_create.wxml
+++ b/miniprogram/pages/create/find_create/find_create.wxml
@@ -5,12 +5,12 @@
       <view class="box_top">看我捡到了个啥(′▽`〃)</view>
       <view class="line"></view>
       <view class="box_center">
-        <view class="left">物品名称</view>
+        <view class="left">物品名称:</view>
         <input placeholder="请输入物品名称" bindinput="name"></input>
       </view>
       <view class="line"></view>
-      <view class="box_center">
-        <view class="left">物品图片</view>
+      <view class="box_center_special">
+        <view class="left">物品图片:</view>
         <scroll-view scroll-x="true" class="images_box">
           <block wx:key="imgbox" wx:for="{{imgbox}}">
             <view class='img-box'>
@@ -27,7 +27,7 @@
       </view>
       <view class="line"></view>
       <view class="box_center">
-        <view class="left">详细说明</view>
+        <view class="left">详细说明:</view>
         <textarea placeholder="请输入捡到的过程，时间地点之类的..." bindinput="info"></textarea>
       </view>
     </view>
@@ -35,12 +35,12 @@
       <view class="box_top">联系方式</view>
       <view class="line"></view>
       <view class="box_center">
-        <view class="left">手机号:</view>
+        <view class="left2">手机号:</view>
         <input placeholder="请输入你的手机号" bindinput="pCall"></input>
       </view>
       <view class="line"></view>
       <view class="box_center">
-        <view class="left">微信号:</view>
+        <view class="left2">微信号:</view>
         <input placeholder="请输入你的微信号" bindinput="pWechat"></input>
       </view>
     </view>
