--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -7,16 +7,18 @@
       <image src="../../images/p2.jpg"></image>
     </swiper-item>
   </swiper>
-  <view class="line">
-    <view class="box" bindtap="found">
-      <!-- <image src="../../images/lost.png"></image> -->
-      <view>失物招领</view>
+  <view class="buttons">
+    <view class="line">
+      <view class="box" bindtap="found">
+        <!-- <image src="../../images/lost.png"></image> -->
+        <view>失 物 招 领</view>
+      </view>
     </view>
-  </view>
-  <view class="line">
-    <view class="box" bindtap="lost">
-      <!-- <image src="../../images/lost.png"></image> -->
-      <view>寻物启事</view>
+    <view class="line">
+      <view class="box" bindtap="lost">
+       <!-- <image src="../../images/lost.png"></image> -->
+        <view>寻 物 启 事</view>
+      </view>
     </view>
   </view>
 </view>
