注释掉了展示页面的发布按钮
--story=1003792 --user=柳鑫

--- a/miniprogram/pages/found/found.wxml
+++ b/miniprogram/pages/found/found.wxml
@@ -76,7 +76,7 @@
     </swiper-item>
   </swiper>
 </view>
-<image class="send" src="../../images/biaobai/send.png" bindtap="send"></image>
+<!-- <image class="send" src="../../images/biaobai/send.png" bindtap="send"></image> -->
 <block wx:if="{{isSend}}">
   <view class="show_send"  bindtap="back">
     <view class="bg"></view>
