--- a/miniprogram/pages/lost/lost.wxml
+++ b/miniprogram/pages/lost/lost.wxml
@@ -76,7 +76,7 @@
     </swiper-item>
   </swiper>
 </view>
-<image class="send" src="../../images/biaobai/send.png" bindtap="send"></image>
+<!-- <image class="send" src="../../images/biaobai/send.png" bindtap="send"></image> -->
 <block wx:if="{{isSend}}">
   <view class="show_send"  bindtap="back">
     <view class="bg"></view>
