--- a/miniprogram/pages/create/find_create/find_create.wxml
+++ b/miniprogram/pages/create/find_create/find_create.wxml
@@ -1,7 +1,7 @@
 <!--pages/create/find_create/find_create.wxml-->
 <view class="all">
   <block>
-    <view class="box">
+    <view class="box"> <!--针对全局的布局-->
       <view class="box_top">看我捡到了个啥(′▽`〃)</view>
       <view class="line"></view>
       <view class="box_center">
@@ -9,8 +9,12 @@
         <input placeholder="请输入物品名称" bindinput="name"></input>
       </view>
       <view class="line"></view>
-      <view class="box_center_special">
-        <view class="left">物品图片:</view>
+
+      <view class="box_center">
+        <view class="left">详细说明:</view>
+        <textarea placeholder="请输入捡到的过程，时间地点之类的..." bindinput="info"></textarea>
+      </view>
+      <view class="pic_pos">
         <scroll-view scroll-x="true" class="images_box">
           <block wx:key="imgbox" wx:for="{{imgbox}}">
             <view class='img-box'>
@@ -25,14 +29,12 @@
           </view>
         </scroll-view>
       </view>
-      <view class="line"></view>
-      <view class="box_center">
-        <view class="left">详细说明:</view>
-        <textarea placeholder="请输入捡到的过程，时间地点之类的..." bindinput="info"></textarea>
-      </view>
     </view>
     <view class="box">
-      <view class="box_top">联系方式</view>
+      <view class="box_center">
+        <view class="left2">QQ号：</view>
+        <input placeholder="请输入你的QQ号" bindinput="pCall"></input>
+      </view>
       <view class="line"></view>
       <view class="box_center">
         <view class="left2">手机号:</view>
