--- a/miniprogram/pages/lost/lost.wxss
+++ b/miniprogram/pages/lost/lost.wxss
@@ -32,14 +32,12 @@ swiper {
 }
 
 .box {
-  border-radius: 20rpx;
   padding: 3vw;
   background-color: white;
   width: 84vw;
   margin: auto;
   margin-top: 30rpx;
   margin-bottom: 30rpx;
-  box-shadow: 10rpx 10rpx 10rpx rgba(0, 0, 0, 0.2);
 }
 
 .top {
@@ -59,23 +57,20 @@ swiper {
 .call {
   width: 60rpx;
   height: 60rpx;
+  margin-left: 10rpx;
 }
 
 .title {
   font-size: 40rpx;
+  color: #363636;
   font-weight: bolder;
   line-height: 60rpx;
 }
 
-.line {
-  margin: 10rpx 0;
-  position: relative;
-  left: -3vw;
-  width: 90vw;
-  border: 1rpx #e6e3e3 solid;
-}
-
 .info {
+  margin-top: 15rpx;
+  color: #363636;
+  font-size: 33rpx;
   width: 100%;
   line-height: 40rpx;
   text-align: justify;
@@ -90,12 +85,13 @@ swiper {
 
 .delete {
   color: red;
+  font-weight: bold;
 }
 
 .time {
   text-align: right;
   margin-right: 10rpx;
-  color: grey;
+  color: #707070;
   font-size: 20rpx;
 }
 
@@ -108,8 +104,6 @@ swiper {
   width: 150rpx;
   height: 150rpx;
   margin-right: 20rpx;
-  border-radius: 15rpx;
-  border: 5rpx black solid;
 }
 
 .send {
