--- a/miniprogram/pages/mine/about/about.wxss
+++ b/miniprogram/pages/mine/about/about.wxss
@@ -12,7 +12,9 @@
 .about_data{
 	background-color: #fff;
 	border-top: 1rpx solid #ccc;
-	color:#333333
+	font-size: 33rpx;
+	color:#333333;
+	letter-spacing: 5rpx;
 }
 .about_data view{
 	width: 95%;
@@ -22,15 +24,21 @@
 
 .about_title{
 	margin: 30rpx 10rpx;
+	font-weight: bold;
 }
 .lianxi_list{
 	height: 80rpx;
 	line-height: 80rpx;
 	background-color: #fff;
+	font-size: 33rpx;
 	padding-left: 20rpx;
-	color:#333333
+	color:#333333;
+	letter-spacing: 3rpx;
 }
 .border-b{
 	border-top: 1px solid #ccc;
-	color:#333333
+	color:#333333;
+}
+.t{
+	letter-spacing: 5rpx;
 }
