--- a/miniprogram/pages/found/found.wxss
+++ b/miniprogram/pages/found/found.wxss
@@ -1,3 +1,19 @@
+@import "../../weui.wxss";
+
+ .searchbar-result {
+   margin-top:0;
+   font-size:14px
+  }
+ 
+ .searchbar-result .weui-cell__bd {
+   padding:2px 0 2px 20px;
+   color:var(--weui-FG-1)
+  }
+ 
+ .searchbar-result:before {
+   display:none
+  }
+
 .tab-h {
   width: 100vw;
   display: flex;
@@ -55,24 +71,24 @@ swiper {
 }
 
 .call {
-  width: 60rpx;
-  height: 60rpx;
+  width: 50rpx;
+  height: 50rpx;
   margin-left: 10rpx;
 }
 
 .title {
-  font-size: 40rpx;
+  font-size: 35rpx;
   color: #363636;
-  font-weight: bolder;
-  line-height: 60rpx;
+  line-height: 50rpx;
+  font-weight: bold;
 }
 
 .info {
-  margin-top: 15rpx;
+  margin-left: 75rpx;
   color: #363636;
   font-size: 33rpx;
-  width: 100%;
-  line-height: 40rpx;
+  width: 80%;
+  line-height: 50rpx;
   text-align: justify;
 }
 
@@ -98,6 +114,7 @@ swiper {
 .img_box {
   white-space: nowrap;
   margin-top: 20rpx;
+  margin-left: 75rpx;
 }
 
 .img {
