--- a/miniprogram/pages/create/lost_create/lost_create.wxss
+++ b/miniprogram/pages/create/lost_create/lost_create.wxss
@@ -1,5 +1,3 @@
-
-
 .all {
   width: 90vw;
   height: 92vh;
@@ -26,7 +24,8 @@
   border: 1rpx #e6e3e3 solid;
   position: relative;
   left: -3vw;
-  margin: 15rpx 0;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .box_center {
@@ -34,8 +33,9 @@
   flex-direction: row;
 }
 
-.left {
-  width: 30%;
+.text {
+  font-size:17px;
+  height: 6em;
 }
 
 .left2 {
@@ -85,14 +85,14 @@ input, textarea {
 }
 
 button {
-  width: 100vw;
-  height: 8vh;
-  line-height: 8vh;
+  width: 90vw;
+  height: 9vh;
+  line-height: 9vh;
   border: none;
-  border-radius: 0;
+  border-radius: 10rpx;
   background-color: #f96159;
   color: white;
   position: fixed;
-  bottom: 0
+  bottom: 25px;
+  margin-left: 37rpx;
 }
-
