把QQ号输入更改为校区输入
--story=1004123 --user=柳鑫

--- a/miniprogram/pages/create/find_create/find_create.wxml
+++ b/miniprogram/pages/create/find_create/find_create.wxml
@@ -30,8 +30,8 @@
     </view>
     <view class="box">
       <view class="box_center">
-        <view class="left2">QQ号</view>
-        <input placeholder="    请输入你的QQ号" bindinput="pCall"></input>
+        <view class="left2">校区</view>
+        <input placeholder="    请输入你的校区" bindinput="position"></input>
       </view>
       <view class="line"></view>
       <view class="box_center">
