完成校区标签
--story=1004991 --user=柳鑫

--- a/miniprogram/pages/found/found.wxml
+++ b/miniprogram/pages/found/found.wxml
@@ -29,6 +29,7 @@
                 <image class="call" src="../../images/wechat.png" bindtap="wechat" data-wechat="{{item}}"></image>
               </view>
             </view>
+            <text class="tag">{{item.position}}</text>
             <view class="line"></view>
             <view class="info">
               <text>物品：{{item.name}}</text>
@@ -64,6 +65,7 @@
                 <image class="call" src="../../images/wechat.png" bindtap="wechat" data-wechat="{{item}}"></image>
               </view>
             </view>
+            <text class="tag">{{item.position}}</text>
             <view class="line"></view>
             <view class="info">
               <text>物品：{{item.name}}</text>
