--- a/miniprogram/pages/create/find_create/find_create.wxml
+++ b/miniprogram/pages/create/find_create/find_create.wxml
@@ -30,17 +30,32 @@
     </view>
     <view class="box">
       <view class="box_center">
-        <view class="left2">校区</view>
-        <input placeholder="    请输入你的校区" bindinput="position"></input>
+        <view class="left">校区</view>
+        <radio-group class="radio-group" bindchange="position">
+          <label class = "radio">
+          八里台<radio value="八里台" checked="true"/>
+          </label>
+          <label class = "radio">
+          津南<radio value="津南" checked=""/>
+          </label>
+          <label class = "radio">
+          泰达<radio value="泰达" checked=""/>
+          </label>
+      </radio-group>
       </view>
       <view class="line"></view>
       <view class="box_center">
-        <view class="left2">手机号</view>
+        <view class="left">QQ号</view>
+        <input placeholder="    请输入你的QQ号" bindinput="pQQnum"></input>
+      </view>
+      <view class="line"></view>
+      <view class="box_center">
+        <view class="left">手机号</view>
         <input placeholder="    请输入你的手机号" bindinput="pCall"></input>
       </view>
       <view class="line"></view>
       <view class="box_center">
-        <view class="left2">微信号</view>
+        <view class="left">微信号</view>
         <input placeholder="    请输入你的微信号" bindinput="pWechat"></input>
       </view>
       <view class="line"></view>
