--- a/miniprogram/pages/create/find_create/find_create.wxss
+++ b/miniprogram/pages/create/find_create/find_create.wxss
@@ -30,6 +30,20 @@
   margin-bottom: 10px;
 }
 
+.radio-group{
+  align-items: center;
+}
+
+radio .wx-radio-input{
+  width: 50rpx;
+  height: 50rpx;
+  border-radius: 50%;
+  border-color:#1f0e0e !important;
+}
+radio .wx-radio-input.wx-radio-input-checked {
+  border-color:#028318 !important;
+}
+
 .box_center {
   display: flex;
   flex-direction: row;
@@ -37,10 +51,10 @@
 
 .text {
   font-size:17px;
-  height: 6em;
+  height: 4em;
 }
 
-.left2 {
+.left {
   width: 23%;
 }
 
@@ -51,18 +65,18 @@ input, textarea {
 /* 图片 */
 .images_box {
   white-space: nowrap;
-  height: 150rpx;
-  width: 75%;
+  height: 160rpx;
+  width: 100%;
   overflow: hidden
 }
 
 .img-box {
   display: inline-block;
-  border: 3rpx;
-  border-style: dashed;
+  border: 2rpx;
+  border-style: solid;
   border-color: rgba(0, 0, 0, 0.452);
-  width: 100rpx;
-  height: 100rpx;
+  width: 120rpx;
+  height: 120rpx;
   margin-right: 35rpx;
   margin-top: 30rpx;
   margin-bottom: 20rpx;
@@ -72,8 +86,8 @@ input, textarea {
 /* 删除图片 */
 
 .img-delect {
-  width: 30rpx;
-  height: 30rpx;
+  width: 40rpx;
+  height: 40rpx;
   border-radius: 50%;
   position: absolute;
   right: -15rpx;
@@ -95,7 +109,7 @@ button {
   background-color: #f96159;
   color: white;
   position: fixed;
-  bottom: 25px;
+  bottom: 8px;
   margin-left: 37rpx;
 }
 
