--- a/miniprogram/pages/create/lost_create/lost_create.wxss
+++ b/miniprogram/pages/create/lost_create/lost_create.wxss
@@ -38,7 +38,7 @@
   height: 6em;
 }
 
-.left2 {
+.left {
   width: 23%;
 }
 
@@ -70,8 +70,8 @@ input, textarea {
 /* 删除图片 */
 
 .img-delect {
-  width: 30rpx;
-  height: 30rpx;
+  width: 60rpx;
+  height: 60rpx;
   border-radius: 50%;
   position: absolute;
   right: -15rpx;
@@ -82,6 +82,13 @@ input, textarea {
 .img {
   width: 100%;
   height: 100%;
+}
+
+.img_delete {
+  width: 100%;
+  height: 100%;
+  right: 15rpx;
+  top: 15rpx;
 }
 
 button {
